--- a/src/styles/Toggle.module.css
+++ b/src/styles/Toggle.module.css
@@ -77,7 +77,7 @@
   z-index: 6;
   border: solid 0.125px #ddd;
   border-radius: calc(var(--circle-size) / 2);
-  box-shadow: -1px -1px 4px 3px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: -1px -1px 4px 2px rgba(0, 0, 0, 0.1) inset;
   background-color: #fff;
   cursor: pointer;
 }
