--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,13 @@
+html {
+  height: 400px;
+  width: 300px;
+  box-sizing: border-box;
+}
+
 body {
-    min-height: 400px;
-    min-width: 300px;
-    margin: 0;
-    background-color: rgba(255, 255, 255, 0.1);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
